<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/white"
    android:paddingHorizontal="15dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/title"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_title_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:text="0/50"
                android:textColor="@color/gray3"
                android:textSize="16sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:hint="@string/title_hint"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:maxLength="@string/limitTitle"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/host"
            android:textColor="@color/black2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_host"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:hint="@string/host_hint"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/phone_number"
            android:textColor="@color/black2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:hint="@string/phone_number_hint"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="10"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_detail_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0/1000"
                android:textColor="@color/gray3"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/border"
            android:padding="10dp"
            android:gravity="top|start"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:maxLength="@string/limitDetail"/>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/warning"
            android:textColor="@color/gray3"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_space"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
