<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="0dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/post_type"
        android:textSize="16sp"
        android:textColor="@color/black2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_post_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.43"
            android:background="@drawable/border_left"
            android:backgroundTint="@color/blue2"
            android:paddingHorizontal="5dp"
            android:text="@string/all"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="false"/>

        <TextView
            android:id="@+id/tv_rent_room"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/border_square"
            android:text="@string/rent_room"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:clickable="true"/>


        <TextView
            android:id="@+id/tv_share_room"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/border_right"
            android:text="@string/share_room"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:clickable="true"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/room_type"
        android:textSize="16sp"
        android:textColor="@color/black2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_room_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.1"
            android:background="@drawable/border_left"
            android:backgroundTint="@color/blue2"
            android:text="@string/all"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.1"
            android:background="@drawable/border_square"
            android:text="@string/room"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_apartment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.1"
            android:background="@drawable/border_square"
            android:text="@string/apartment"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_mini_apartment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border_square"
            android:text="@string/mini_apartment"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_house"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/border_right"
            android:text="@string/house"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:clickable="true"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/titleSort"
        android:textSize="16sp"
        android:textColor="@color/black2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_sort_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.15"
            android:background="@drawable/border_left"
            android:backgroundTint="@color/blue2"
            android:text="@string/all"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_latest"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border_square"
            android:text="@string/latest"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_upPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border_square"
            android:text="@string/upPrice"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_downPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/border_right"
            android:text="@string/downPrice"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue2"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titlePrice"
            android:textSize="16sp"
            android:gravity="left"
            android:textColor="@color/black2"/>

        <TextView
            android:id="@+id/tv_selected_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selected_price"
            android:textSize="16sp"
            android:gravity="right"
            android:textColor="@color/black2"/>

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <!-- View làm nền -->
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:paddingHorizontal="10dp"
            android:background="@color/gray3"
            android:layout_centerVertical="true"/>

        <!-- View làm thanh kéo -->
        <View
            android:id="@+id/rangeView_price"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:paddingHorizontal="10dp"
            android:background="@color/blue2"
            android:layout_centerVertical="true"/>

        <!-- View cho đầu mút bên trái -->
        <View
            android:id="@+id/handleLeft_price"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/custom_thumb"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <!-- View cho đầu mút bên phải -->
        <View
            android:id="@+id/handleRight_price"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/custom_thumb"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titleArea"
            android:textSize="16sp"
            android:gravity="left"
            android:textColor="@color/black2"/>

        <TextView
            android:id="@+id/tv_selected_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selected_area"
            android:textSize="16sp"
            android:gravity="right"
            android:textColor="@color/black2"/>

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <!-- View làm nền -->
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:paddingHorizontal="10dp"
            android:background="@color/gray3"
            android:layout_centerVertical="true"/>

        <!-- View làm thanh kéo -->
        <View
            android:id="@+id/rangeView_area"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:paddingHorizontal="10dp"
            android:background="@color/blue2"
            android:layout_centerVertical="true"/>

        <!-- View cho đầu mút bên trái -->
        <View
            android:id="@+id/handleLeft_area"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/custom_thumb"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <!-- View cho đầu mút bên phải -->
        <View
            android:id="@+id/handleRight_area"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/custom_thumb"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/blue2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_filter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_button_fill"
            android:gravity="center"
            android:text="@string/search"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
