<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="0dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/action_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_background"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/action_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_call"
            android:textColor="@color/blue2"
            android:paddingStart="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_background"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_message"
            android:contentDescription="@string/action_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_message"
            android:textColor="@color/blue2"
            android:paddingStart="10dp"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/action_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/action_directions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_directions"
            android:textColor="@color/blue2"
            android:paddingStart="10dp"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
